<resources>
    <string name="app_name">DomesticViolenceAlert</string>
    <string name="action_settings">Settings</string>
    <string name="search_phone_number_email">Search Phone Number/Email</string>
    <string name="search_phone_number">Search Phone Number</string>
    <string name="search_email">Search Email</string>
    <string name="report_a_person">Report a Person</string>
    <string name="I_need_help">I Need Help!</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_Info_1">Find him/her attractive? But don\'t forget your safety! Anybody could commited domestic violence.</string>
    <string name="welcome_Info_2">We wish to save everyone from a dangerous relationship.</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="phone_number_email_address">Phone number/ Email address</string>
    <string name="name">Name</string>
    <string name="search_results">Search Results</string>
    <string name="back">Back</string>
    <string name="main_information">Main Information</string>
    <string name="additional_information">Additional Information</string>
    <string name="phone_number">Phone: %s </string>
    <string name="email_address">Email: %s </string>
    <string name="login">Login</string>
    <string name="login_description">For verifying information, we require people to login before submitting a report
        form.
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="proofs_of_domestic_violence">Proofs of Domestic Violence</string>
    <string name="crime_record">Crime Record</string>
    <string name="report">Report</string>
    <string name="need_help">Need Help</string>
    <string name="need_help_text1">Please leave your personal information here, and we will reach you within 1-3 days.
    </string>
    <string name="need_help_text2">Your information is protected and will not be shared with anyone except the police.
    </string>
    <string name="need_help_text3">Please let us help you!
    </string>
    <string name="contacts">Contacts</string>
    <string name="what_happened">What Happened</string>
    <string name="submit">Submit</string>
    <string name="need_help_message">
        "Phone: %s \n Email: %s \n\n What Happened: %s"
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name = "disagree_text">Note: Please upload at least one report before clicking on disagree button</string>
    <string name="count_dates">%s Days Ago</string>
    <string name="one_week_ago">One Week Ago</string>
    <string name="agree_pos">I already upload one</string>
    <string name="agree_neg">Go add a report</string>
    <string name="agree_text">Note: Please upload at least one report before clicking on this agree button</string>
    <string name="pic_dialog_title">Upload Image for Reports</string>
    <string name="add_report_dialog">Note: Only one image is allowed for each report\nPlease combine all your evidences into one</string>
    <string name="pic_pos">Take Picture</string>
    <string name="pic_neg">Choose Picture</string>
    <string name="add_proofs_dialog_title">Upload Proofs</string>
    <string name="add_proofs_dialog">Note: only three proofs are allowed\nPlease choose the most intuitive ones</string>
    <string name="today">Today</string>
    <string name="latest_update">Latest Update: %s </string>
    <string name="created_on">Created On: %s</string>
    <string name="search_contacts">Search Contacts</string>
</resources>

