<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="20dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/home_button"
            android:background="@color/mainColor"
    />

    <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/home_button"
            android:textColor="@android:color/black"
            android:layout_marginTop="40dp"
    />

    <TextView android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:text="@string/login_description"
              android:layout_below="@id/login"
              android:textColor="@android:color/black"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
    />


    <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_above="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"

            android:hint="@string/username"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
    />

    <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"

            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
    />


    <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:layout_below="@id/password"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/mainColor"
            android:textSize="20dp"
    />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:text="@string/register"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:shadowColor="@android:color/white"
            android:layout_marginLeft="55dp"
            android:textColor="@color/mainColor"
    />


</RelativeLayout>