<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="20dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/home_button"
            android:background="@color/mainColor"
    />

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="20dp"
            android:paddingHorizontal="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/back_button"
            android:background="@color/mainColor"
    />

    <TextView
            android:id="@+id/search_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/search_results"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/back_button"
    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_results"
            android:layout_margin="20dp"
    />

</RelativeLayout>