<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="20dp"
            android:paddingHorizontal="10dp"
            android:id="@+id/home_button"
            android:background="@color/mainColor"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/home_button"
            android:textColor="@android:color/black"
            android:layout_margin="40dp"
    />

    <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_above="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"

            android:hint="@string/username"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
    />

    <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"

            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
    />

    <EditText
            android:id="@+id/email_address"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"

            android:hint="Email@email.com"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
    />

    <Button
            android:id="@+id/search_go_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:layout_below="@id/email_address"
            android:layout_margin="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/mainColor"
            android:textSize="20dp"
    />


</RelativeLayout>