<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
        android:layout_width="match_parent">
    <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/home"
            android:layout_margin="5dp"
            android:id="@+id/header_home_button"
            android:background="@color/mainColor"

    />

    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/infoBackground"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="50dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
                android:id="@+id/personal_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:foregroundGravity="center"
                android:paddingTop="15dp"
        />

        <Button android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/add_report_button"
                android:layout_below="@id/personal_image"
                android:text="Add Report"
                android:background="@color/infoNumberYellow"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="7dp"
        />

        <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:weightSum="25"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
        >
            <TextView
                    android:id="@+id/suspect_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="Target Name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_weight="18"
                    android:padding="5dp"
                    android:textSize="30dp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/suspect_update_time"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:text="@string/latest_update"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/suspect_report_time"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:text="@string/created_on"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    android:background="@drawable/border"
            >
                <LinearLayout
                        android:id="@+id/score_process_addi"
                        android:orientation="horizontal"
                        android:layout_weight="75"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <View
                            android:id="@+id/score_process_color_addi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/scoreProcess"
                    />
                </LinearLayout>

            </LinearLayout>


            <TextView
                    android:id="@+id/score_process_text_addi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="75"
                    android:textSize="12dp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
            />

        </LinearLayout>
    </RelativeLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="30dp"
                  android:layout_below="@+id/header"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  android:id="@+id/tabs"
    >
        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/tab_main_info_wrap"
        >
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/tab_main_info"
                    android:background="@color/infoDarkGreen"
                    android:text="@string/main_information"
            />

        </RelativeLayout>

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/tab_additional_info"
                android:background="@color/infoBackground"
                android:text="@string/additional_information"
        />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/addi_info_recycler_view"
            android:layout_below="@+id/tabs"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
    </android.support.v7.widget.RecyclerView>


</RelativeLayout>